initial commit - CSS LEARNING PROJECT

--- a/index.html
+++ b/index.html
@@ -193,3 +193,18 @@
 
 
 
+<!-- display propert in css -->
+<h1>CSS Display Property Example</h1>
+<h3>it will block the padding and margin</h3>
+<div style="display: block; background-color: lightcoral; padding: 10px; margin-bottom: 10px;">
+    This is a block-level element.
+</div>
+<h3>it will take the text size we cannot add the padding or margin</h3>
+<span style="display: inline; background-color: lightseagreen; padding: 10px; margin-bottom: 10px;">
+    This is an inline element.
+</span>
+<h3>it will take the block properties but will be in line with other elements</h3>
+<div style="display: inline-block; background-color: greenyellow; padding: 40px; margin-top: 20px;">
+    This is an inline-block element.
+</div>
+
